--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="forgot_password_text"><u>Forgot Password?</u></string>
     <string name="remember_me_rb_text">Remember Me</string>
     <string name="login_button_text">Login</string>
+    <string name="biscuit_icon">biscuit icon</string>
 </resources>
