--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="enter_email_text">Enter Email</string>
     <string name="cancel_button_text">Cancel</string>
     <string name="submit_btn_text2">Submit</string>
+    <string name="reject_button">reject button</string>
+    <string name="accept_button">accept button</string>
+    <string name="matched">Matched</string>
+    <string name="pending">Pending</string>
 </resources>
