--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,7 @@
     <string name="account_setting_title">Account Settings</string>
     <string name="notification">Notifications</string>
 
+    <!-- Notifications -->
+    <string name="default_notification_channel_id">channel_id</string>
 
 </resources>
