--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,6 @@
     <string name="notification">Notifications</string>
 
     <!-- Notifications -->
-    <string name="default_notification_channel_id">channel_id</string>
+    <string name="default_notification_channel_id">notification_channel_id</string>
 
 </resources>
