Emanuel Update: Fully updated Editprofile and InitialProfilePersonalization by allowing users to skip initial set up. Images no longer necessary.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,15 @@
     <!-- Notifications -->
     <string name="default_notification_channel_id">notification_channel_id</string>
 
+
+    <!-- Profile Information -->
+    <string name="update">Update</string>
+    <string name="birthday">Select Birthday</string>
+    <string name="firstName">Enter First Name</string>
+    <string name="lastName">Enter Last Name</string>
+    <string name="displayName">Enter Display Name</string>
+    <string name="personalBio">Tells us a little about yourself</string>
+    <string name="personalEmail">Your Email</string>
+
+
 </resources>
