--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="match_group_card_more_button">match group card more button</string>
     <string name="biscuit_icon">biscuit icon</string>
     <string name="about_us">About us</string>
+    <string name="set_primary_group_message">Set a primary group to start matching!</string>
+    <string name="join_group_message">Create or join a group to start matching!</string>
 
     <!--    other groups tab -->
     <string name="matched">Matched</string>
@@ -96,5 +98,23 @@
     <string name="personalBio">Tells us a little about yourself</string>
     <string name="personalEmail">Your Email</string>
     <string name="group_chat_title_placeholder">Group Chat</string>
+
+    <!-- view group info -->
+    <string name="edit_group_profile">Edit group profile</string>
+    <string name="invite_user">Invite a user</string>
+    <string name="report_group">Report group</string>
+    <string name="block_group">Block group</string>
+
+    <!-- join group -->
+    <string name="search">Search</string>
+    <string name="join">Join</string>
+    <string name="group_full">Group is full</string>
+    <string name="already_joined">Already joined</string>
+    <string name="member_count">%1$d/4</string>
+
+    <!-- pending group -->
+    <string name="no_pending_groups">No pending groups</string>
+    <string name="block_user">Block user</string>
+    <string name="report_user">Report user</string>
 
 </resources>
