--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,11 @@
     <!-- Discovery Preferences -->
     <string name="discoverPref">Discovery Preferences</string>
     <string name="fragmet_mgdialog_title">Please select which group chat you would like to open.</string>
+    <string name="fragment_report_dialog_profanity_text">Profanity</string>
+    <string name="fragment_report_dialog_imposter_text">Fake Account</string>
+    <string name="fragment_report_dialog_harassment_text">Harassment</string>
+    <string name="fragment_report_dialog_tell_us_more_hint">Tell us more…</string>
+    <string name="fragment_report_dialog_other_tv">Other:</string>
     <string-array name="rangeSliderValues">
         <item>18</item>
         <item>100</item>
