--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,7 +107,8 @@
     <string name="report_group">Report group</string>
     <string name="block_group">Block group</string>
     <string name="give_biscuit">Give biscuit</string>
-    <string name="increment_biscuit">%1$d</string>
+    <string name="remove_biscuit">Remove biscuit</string>
+    <string name="biscuit_val">%1$d</string>
 
     <!-- join group -->
     <string name="search">Search</string>
